--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             </div>
                         </div>
                     </div>
-                    <img src="imgs/feature-phone.png" alt="phone">
+                    <img class="img-phone" src="imgs/feature-phone.png" alt="phone">
                 </div>
             </div>
         </section>
